Prevent horizontal scroll on CoC page
Break long words, or URLs, from creating a horizontal scroll on the
page. Instead, break the URLs into parts over multiple lines. I noticed
this was a problem on mobile Safari, but on desktop Firefox already did
it correctly, which is how it was missed.

--- a/_sass/components/_section.sass
+++ b/_sass/components/_section.sass
@@ -25,6 +25,9 @@
   p ~ h4
     margin-top: 40px
 
+  p
+    overflow-wrap: break-word
+
 .section-dark
   background-color: #faedff
 
